--- a/chap-implementation.tex
+++ b/chap-implementation.tex
@@ -194,6 +194,6 @@ The final gathering shader processes one pixel per invocation. Without clustered
 
 In addition to clustered deferred shading, we also implemented its predecessor tiled shading. Since it does not perform clustering in the z-dimension (or in other words, it uses only one depth slice per tile), it allows for a simpler implementation.
 
-We integrated tiled shading directly into the final gathering shader. As a reminder, during final gathering each work group processes those pixels from several interleaving blocks that use the same partition of the light list, e.\,g., every first pixel of 8x8 interleaving blocks, and each invocation processes one pixel. With tiled shading, each pixel's z-value is used to build a minimum and maximum z-value for this tile, again using atomic operations. In a second step, each invocation processes one VPL and culls it against the bounding box of the pixels, which is defined by the pixel's minimum and maximum fragment coordinates and z-values determined in the previous step. All lights that pass the culling test are added to a light list in a shared array, again using atomic counters to ensure no gaps are produced and no light is overwritten. Subsequently, final gathering is performed as usual with the difference of using the light list in the shared array instead of a light list computed in a previous shader pass.
+We integrated tiled shading directly into the final gathering shader, in an approach very similar to \citet{Andersson:2011:RenderingBattlefield3}. As a reminder, during final gathering each work group processes those pixels from several interleaving blocks that use the same partition of the light list, e.\,g., every first pixel of 8x8 interleaving blocks, and each invocation processes one pixel. With tiled shading, each pixel's z-value is used to build a minimum and maximum z-value for this tile, again using atomic operations. In a second step, each invocation processes one VPL and culls it against the bounding box of the pixels, which is defined by the pixel's minimum and maximum fragment coordinates and z-values determined in the previous step. All lights that pass the culling test are added to a light list in a shared array, again using atomic counters to ensure no gaps are produced and no light is overwritten. Subsequently, final gathering is performed as usual with the difference of using the light list in the shared array instead of a light list computed in a previous shader pass.
 
 Similar to the integrated interleaved shading algorithm, this implementation has several benefits. Again the implementation complexity is reduced, since no additional shader passes and no additional buffers with corresponding data layout considerations are needed. Second, no additional storage is needed, and third, this implementation, although simpler, turned out to be faster than the clustered deferred shading. See \Cref{sec:results:clusteredShading} for details.
