--- a/chap-introduction.tex
+++ b/chap-introduction.tex
@@ -17,5 +17,7 @@ single bounce only
 
 \section{Application Areas}
 
+Virtual city models have been done without shadows and not actually realtime: \citep{Klehm:2010:MassiveLightingCityModels}
+
 
 \cleardoublepage
