--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -1161,7 +1161,6 @@ editor = {Vaclav Skala},
 url = {http://www.paul-rosenthal.de/wp-content/uploads/2013/06/guenther-wscg-2013.pdf
 http://www.paul-rosenthal.de/wp-content/uploads/2013/06/guenther-wscg-2013.png},
 issn = {1213-6972},
-year = {2013},
 date = {2013-01-01},
 journal = {Journal of WSCG},
 volume = {21},
@@ -1172,4 +1171,20 @@ address = {Plzen, Czech Republic},
 keywords = {},
 pubstate = {published},
 tppubtype = {article}
+}
+
+@misc{Andersson:2011:RenderingBattlefield3,
+author = {Johan Andersson},
+title = {DirectX 11 rendering in Battlefield 3},
+howpublished = {Presentation at GDC 2011},
+year = {2011},
+url = {http://www.dice.se/news/directx-11-rendering-battlefield-3/}
+}
+
+
+@mastersthesis{Klehm:2010:MassiveLightingCityModels,
+  author       = {Oliver Klehm},
+  title        = {Interactive Massive Lighting for Virtual 3D City Models},
+  school       = {Hasso Plattner Institute, University of Potsdam},
+  year         = 2010,
 }
