--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -123,7 +123,6 @@
 
 \todo[color=white]{explain clamping in concept}
 
-\todo{comma behind i.e. and e.g.}
 \todo{explain/replace all ``have not implemented''}
 \todo{more overview at the beginning of sections}
 \todo{brighter version for print}
@@ -135,6 +134,10 @@
 \todo{what openGL version do i require? also, i should look up which dedicated GPUs support 4.5/4.4 and what Intels GPUs say. maybe point out the need for modern OpenGL more? also, how they make it easier to implement.}
 
 \todo[color=yellow]{investigate into interleaving via shared memory in 2x2 groups (that is, one work group reads 2x2 interleaved pixels instead of one)}
+
+\todo{do some pseudocode}
+\todo{more debug views, debug data visualizations}
+\todo{daniel's pipeline visualizations, see emails}
 
 % \include{chap-examples}
 % \include{chap-moreexamples}
