--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -1188,3 +1188,11 @@ url = {http://www.dice.se/news/directx-11-rendering-battlefield-3/}
   school       = {Hasso Plattner Institute, University of Potsdam},
   year         = 2010,
 }
+
+@misc{Jimenez:2016:FilmicSMAA,
+author = {Jorge Jimenez},
+title = {Filmic SMAA: Sharp Morphological and Temporal Antialiasing},
+howpublished = {Presentation at SIGGRAPH 2016},
+year = {2016},
+url = {http://advances.realtimerendering.com/s2016/index.html}
+}
