--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -138,6 +138,7 @@
 \todo{do some pseudocode}
 \todo{more debug views, debug data visualizations}
 \todo{daniel's pipeline visualizations, see emails}
+\todo{4k tests}
 
 % \include{chap-examples}
 % \include{chap-moreexamples}
